Faculty side completed

--- a/LMS/templates/faculty_attendance_delete.html
+++ b/LMS/templates/faculty_attendance_delete.html
@@ -2,6 +2,47 @@
 <html>
 <head>
     <title>Delete Attendance Record</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #1F0615; /* Background color */
+            color: #FFFFFF; /* Text color */
+            text-align: center; /* Center align text */
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            margin-bottom: 20px;
+        }
+        p {
+            margin-bottom: 20px;
+        }
+        form {
+            display: inline-block;
+            margin-bottom: 10px;
+        }
+        button[type="submit"] {
+            background-color: #955C7E; /* Button background color */
+            color: #FFFFFF; /* Button text color */
+            border: none;
+            border-radius: 5px;
+            padding: 10px 20px;
+            font-size: 16px;
+            transition: all 0.3s ease-in-out;
+            cursor: pointer;
+        }
+        button[type="submit"]:hover {
+            background-color: #a10563; /* Hovered button background color */
+        }
+        a {
+            color: #FFFFFF;
+            text-decoration: none;
+            margin-left: 10px;
+        }
+        a:hover {
+            color: #a10563;
+        }
+    </style>
 </head>
 <body>
     <h1>Delete Attendance Record</h1>
