--- a/LMS/templates/student_courses.html
+++ b/LMS/templates/student_courses.html
@@ -73,11 +73,11 @@
                         <h6 class="m-b-20">Faculty_Name</h6>
                         <p><span style="font-size: 20px;">{{ faculty_detail.faculty_name }}</span></p>
                         <h6 class="m-b-20">Qualifications</h6>
-                        <p><span style="font-size: 20px;">{{ faculty_detail.faculty_qualification }}</span></p>
+                        <p><span style="font-size: 20px;">{{ faculty_detail.qualification }}</span></p>
                         <h6 class="m-b-20">Email</h6>
                         <p><span style="font-size: 20px;">{{ faculty_detail.faculty_email }}</span></p>
                         <h6 class="m-b-20">Phone_No</h6>
-                        <p><span style="font-size: 20px;">{{ faculty_detail.faculty_phone }}</span></p>
+                        <p><span style="font-size: 20px;">{{ faculty_detail.phone }}</span></p>
                         
                     </div>
                 </div>
