completed the project with respect to college DBMS_lab

--- a/LMS/templates/faculty_dashboard.html
+++ b/LMS/templates/faculty_dashboard.html
@@ -233,10 +233,10 @@
             <div class="Frame45">
                 <div class="Frame46">
                     <div class="Frame47" onclick="showDetails()">Dashboard</div>
-                    <div class="Frame48" onclick="loadCoursesPage()">Courses</a></div>
                     <div class="Frame49" onclick="showSchedule()">Schedule</div>
+                    <div class="Frame48" onclick="loadCoursesPage()">Courses</div>
                     <div class="Frame50" onclick="loadGradePage()">Grade</div>
-                    <div class="Frame52" onclick="loadAttendancePage()"  >Attendance</a></div>
+                    <div class="Frame52" onclick="loadAttendancePage()">Attendance</div>
                 </div>
                 <div class="Frame53" onclick="logout()">
                     <div class="Logout">
